--- a/requirements.txt
+++ b/requirements.txt
@@ -15,10 +15,16 @@ cycler==0.10.0
 decorator==5.0.9
 defusedxml==0.7.1
 distlib==0.3.1
+dominate==2.6.0
 entrypoints==0.3
 filelock==3.0.12
 Flask==1.1.2
+Flask-Bootstrap==3.3.7.1
+flask-nav==0.6
+fonttools==4.32.0
 gunicorn==20.1.0
+idna==3.3
+importlib-metadata==4.11.3
 itsdangerous==1.1.0
 jedi==0.18.0
 Jinja2==2.11.2
@@ -26,5 +32,25 @@ joblib==1.0.1
 json5==0.9.5
 jsonpickle==2.0.0
 jsonschema==3.2.0
+kiwisolver==1.4.2
+MarkupSafe==2.0.1
+matplotlib==3.5.1
+numpy==1.21.6
 packaging==20.9
+pandas==1.3.5
 pandocfilters==1.4.3
+parso==0.8.3
+Pillow==9.1.0
+pycparser==2.21
+pyparsing==3.0.8
+pyrsistent==0.18.1
+python-dateutil==2.8.2
+pytz==2022.1
+six==1.16.0
+sniffio==1.2.0
+typing_extensions==4.1.1
+visitor==0.1.3
+webencodings==0.5.1
+Werkzeug==2.0.3
+wordcloud==1.8.1
+zipp==3.8.0
