--- a/requirements.txt
+++ b/requirements.txt
@@ -5,16 +5,23 @@ async-generator==1.10
 attrs==21.2.0
 Babel==2.9.1
 backcall==0.2.0
+backports.zoneinfo==0.2.1
+beautifulsoup4==4.11.1
 bleach==3.3.0
 certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
+charset-normalizer==2.0.12
 click==7.1.2
+click-plugins==1.1.1
+cligj==0.7.2
 colorama==0.4.4
+country-converter==0.7.4
 cycler==0.10.0
 decorator==5.0.9
 defusedxml==0.7.1
 distlib==0.3.1
+docopt==0.6.2
 dominate==2.6.0
 entrypoints==0.3
 filelock==3.0.12
@@ -22,6 +29,7 @@ Flask==1.1.2
 Flask-Bootstrap==3.3.7.1
 flask-nav==0.6
 fonttools==4.32.0
+geopandas==0.10.2
 gunicorn==20.1.0
 idna==3.3
 importlib-metadata==4.11.3
@@ -29,12 +37,14 @@ itsdangerous==1.1.0
 jedi==0.18.0
 Jinja2==2.11.2
 joblib==1.0.1
+Js2Py==0.71
 json5==0.9.5
 jsonpickle==2.0.0
 jsonschema==3.2.0
 kiwisolver==1.4.2
 MarkupSafe==2.0.1
 matplotlib==3.5.1
+munch==2.5.0
 numpy==1.21.6
 packaging==20.9
 pandas==1.3.5
@@ -42,13 +52,24 @@ pandocfilters==1.4.3
 parso==0.8.3
 Pillow==9.1.0
 pycparser==2.21
+pyjsparser==2.7.1
 pyparsing==3.0.8
+PyPrind==2.11.3
+pyproj==3.2.1
 pyrsistent==0.18.1
+pySmartDL==1.3.4
 python-dateutil==2.8.2
 pytz==2022.1
+pytz-deprecation-shim==0.1.0.post0
+requests==2.27.1
+Shapely==1.8.1.post1
 six==1.16.0
 sniffio==1.2.0
+soupsieve==2.3.2
 typing_extensions==4.1.1
+tzdata==2022.1
+tzlocal==4.2
+urllib3==1.26.9
 visitor==0.1.3
 webencodings==0.5.1
 Werkzeug==2.0.3
