--- a/real_time_twitter/.env
+++ b/real_time_twitter/.env
@@ -1,1 +1,1 @@
-TWITTER_BEARER_TOKEN = AAAAAAAAAAAAAAAAAAAAAOTnbQEAAAAAxu%2BhheQ3tI0jLBPc%2BuJgwrBe%2BvQ%3Dd1BGofOqv9lJtsTXXLfvSz7DzR1MCqDnDUW43qex9jTK4OwaZr
+TWITTER_BEARER_TOKEN = AAAAAAAAAAAAAAAAAAAAAOTnbQEAAAAAqqrJ52NR8i3StYVDq76ifAu1k8E%3DkOfLzjTTYLYuHdzWznKzOT2CH6Citr1vIpW9qDpJ83unE5goWT
