--- a/requirements.txt
+++ b/requirements.txt
@@ -46,6 +46,7 @@ MarkupSafe==2.0.1
 matplotlib==3.5.1
 munch==2.5.0
 numpy==1.21.6
+oauthlib==3.2.0
 packaging==20.9
 pandas==1.3.5
 pandocfilters==1.4.3
@@ -62,10 +63,12 @@ python-dateutil==2.8.2
 pytz==2022.1
 pytz-deprecation-shim==0.1.0.post0
 requests==2.27.1
+requests-oauthlib==1.3.1
 Shapely==1.8.1.post1
 six==1.16.0
 sniffio==1.2.0
 soupsieve==2.3.2
+tweepy==4.8.0
 typing_extensions==4.1.1
 tzdata==2022.1
 tzlocal==4.2
