--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+absl-py==1.0.0
 anyio==3.1.0
 appdirs==1.4.4
 argon2-cffi==20.1.0
+astunparse==1.6.3
 async-generator==1.10
 attrs==21.2.0
 Babel==2.9.1
@@ -8,6 +10,8 @@ backcall==0.2.0
 backports.zoneinfo==0.2.1
 beautifulsoup4==4.11.1
 bleach==3.3.0
+cached-property==1.5.2
+cachetools==5.0.0
 certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
@@ -28,9 +32,16 @@ filelock==3.0.12
 Flask==1.1.2
 Flask-Bootstrap==3.3.7.1
 flask-nav==0.6
+flatbuffers==2.0
 fonttools==4.32.0
+gast==0.5.3
 geopandas==0.10.2
+google-auth==2.6.6
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+grpcio==1.44.0
 gunicorn==20.1.0
+h5py==3.6.0
 idna==3.3
 importlib-metadata==4.11.3
 itsdangerous==1.1.0
@@ -41,17 +52,27 @@ Js2Py==0.71
 json5==0.9.5
 jsonpickle==2.0.0
 jsonschema==3.2.0
+keras==2.8.0
+Keras-Preprocessing==1.1.2
 kiwisolver==1.4.2
+libclang==14.0.1
+Markdown==3.3.6
 MarkupSafe==2.0.1
 matplotlib==3.5.1
 munch==2.5.0
 numpy==1.21.6
 oauthlib==3.2.0
+opt-einsum==3.3.0
 packaging==20.9
 pandas==1.3.5
 pandocfilters==1.4.3
 parso==0.8.3
 Pillow==9.1.0
+plotly==5.7.0
+preprocessor==1.1.3
+protobuf==3.20.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycparser==2.21
 pyjsparser==2.7.1
 pyparsing==3.0.8
@@ -64,10 +85,20 @@ pytz==2022.1
 pytz-deprecation-shim==0.1.0.post0
 requests==2.27.1
 requests-oauthlib==1.3.1
+rsa==4.8
 Shapely==1.8.1.post1
 six==1.16.0
 sniffio==1.2.0
 soupsieve==2.3.2
+tenacity==8.0.1
+tensorboard==2.8.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.8.0
+tensorflow-io-gcs-filesystem==0.25.0
+termcolor==1.1.0
+tf-estimator-nightly==2.8.0.dev2021122109
+torch==1.11.0
 tweepy==4.8.0
 typing_extensions==4.1.1
 tzdata==2022.1
@@ -77,4 +108,5 @@ visitor==0.1.3
 webencodings==0.5.1
 Werkzeug==2.0.3
 wordcloud==1.8.1
+wrapt==1.14.0
 zipp==3.8.0
