--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,8 @@ filelock==3.0.12
 Flask==1.1.2
 Flask-Bootstrap==3.3.7.1
 flask-nav==0.6
+Flask-Scss==0.5
+Flask-SQLAlchemy==2.5.1
 flatbuffers==2.0
 fonttools==4.32.0
 gast==0.5.3
@@ -39,6 +41,7 @@ geopandas==0.10.2
 google-auth==2.6.6
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
+greenlet==1.1.2
 grpcio==1.44.0
 gunicorn==20.1.0
 h5py==3.6.0
@@ -56,6 +59,7 @@ keras==2.8.0
 Keras-Preprocessing==1.1.2
 kiwisolver==1.4.2
 libclang==14.0.1
+libsass==0.21.0
 Markdown==3.3.6
 MarkupSafe==2.0.1
 matplotlib==3.5.1
@@ -69,7 +73,6 @@ pandocfilters==1.4.3
 parso==0.8.3
 Pillow==9.1.0
 plotly==5.7.0
-preprocessor==1.1.3
 protobuf==3.20.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -79,6 +82,7 @@ pyparsing==3.0.8
 PyPrind==2.11.3
 pyproj==3.2.1
 pyrsistent==0.18.1
+pyScss==1.4.0
 pySmartDL==1.3.4
 python-dateutil==2.8.2
 pytz==2022.1
@@ -90,6 +94,7 @@ Shapely==1.8.1.post1
 six==1.16.0
 sniffio==1.2.0
 soupsieve==2.3.2
+SQLAlchemy==1.4.36
 tenacity==8.0.1
 tensorboard==2.8.0
 tensorboard-data-server==0.6.1
@@ -100,6 +105,7 @@ termcolor==1.1.0
 tf-estimator-nightly==2.8.0.dev2021122109
 torch==1.11.0
 tweepy==4.8.0
+tweet-preprocessor==0.6.0
 typing_extensions==4.1.1
 tzdata==2022.1
 tzlocal==4.2
@@ -110,4 +116,3 @@ Werkzeug==2.0.3
 wordcloud==1.8.1
 wrapt==1.14.0
 zipp==3.8.0
-pyproj==1.9.6
